--- a/logstash/logstash_chargement_sirus.conf
+++ b/logstash/logstash_chargement_sirus.conf
@@ -6,7 +6,8 @@
 #   bin\logstash -f C:\Philippe\dev\hackathon\repo\sirus-elasticsearch\logstash\logstash_chargement_sirus.conf --config.test_and_exit
 # Lancement du chargement :
 #   bin\logstash -f C:\Philippe\dev\hackathon\repo\sirus-elasticsearch\logstash\logstash_chargement_sirus.conf
-# NB : requiert que l'index (ici, sirus_naive) soit créé a priori.
+# NB : requiert que l'index (ici, sirus_naive) soit créé a priori,
+# et bien sûr, qu'Elasticsearch soit démarré et joignable.
 
 # Après l'exécution, un fichier .sincedb est généré. Le but de ce fichier est de permettre à logstash de faire
 # du chargement de fichier "en continu". Mais pour notre besoin, la présence de ce fichier fait qu'une nouvelle
