Refactoring en vue du push sur Github

--- a/logstash/logstash_chargement_sirus.conf
+++ b/logstash/logstash_chargement_sirus.conf
@@ -3,28 +3,34 @@
 # dans un fichier "head_sirus_csv.txt")
 
 # Validation du fichier de config :
-#   bin\logstash -f C:\Philippe\dev\hackathon\repo\sirus-elasticsearch\logstash\logstash_chargement_sirus.conf --config.test_and_exit
+#   bin\logstash -f C:\pl\atelier\hackathon-sirene\dev\sirus-elasticsearch\logstash\logstash_chargement_sirus.conf --config.test_and_exit
+# 
 # Lancement du chargement :
-#   bin\logstash -f C:\Philippe\dev\hackathon\repo\sirus-elasticsearch\logstash\logstash_chargement_sirus.conf
-# NB : requiert que l'index (ici, sirus_naive) soit créé a priori,
-# et bien sûr, qu'Elasticsearch soit démarré et joignable.
+#   bin\logstash -f C:\pl\atelier\hackathon-sirene\dev\sirus-elasticsearch\logstash\logstash_chargement_sirus.conf
+# 
+# NB : requiert que l'index (ici, sirus_basic_mapping) soit créé a priori,
+# et qu'Elasticsearch soit démarré et joignable à l'URL définie dans la section "output".
+
+# Note : pour améliorer les performances, on peut jouer avec les options "pipeline.*" de la commande logstash
+# REF : https://www.elastic.co/guide/en/logstash/current/running-logstash-command-line.html
 
 # Après l'exécution, un fichier .sincedb est généré. Le but de ce fichier est de permettre à logstash de faire
 # du chargement de fichier "en continu". Mais pour notre besoin, la présence de ce fichier fait qu'une nouvelle
 # exécution de la commande "logstash" n'aura aucun effet. Il faut le supprimer avant coup.
 
-# Test du chargement : requête récupérant tous les documents de l'index, tronqués à 10
-#   http://localhost:9200/sirus_naive/doc/_search?q=*&pretty
+# NB : logstash ne s'arrête pas après avoir chargé le fichier, il faut l'arrêter à la main (CTRL+C)
+# https://stackoverflow.com/questions/30759951/delete-logs-after-consumption-logstash
 input{
 	file {
 		codec => plain{
-			# charset => "ISO-8859-1"
-			charset => "UTF-8"
+			charset => "ISO-8859-1"
+			#charset => "UTF-8"
 		}
-		path => ["C:/Philippe/dev/hackathon/repo/sirus-elasticsearch/head_sirus_csv.txt"]
-		sincedb_path => "C:/Philippe/dev/hackathon/repo/sirus-elasticsearch/.sincedb_chargement_sirus"
+	    # Fichier complet
+		path => ["C:/pl/atelier/hackathon-sirene/dev/sirus.csv"]
+		sincedb_path => "C:/pl/atelier/hackathon-sirene/dev/sirus-elasticsearch/.sincedb_chargement_sirus"
 		start_position => "beginning"
-  }
+  	}
 }
 
 filter {
@@ -49,6 +55,6 @@ filter {
 output {
 	elasticsearch {
   	hosts => [ "127.0.0.1:9200" ]
-		index => "sirus_naive"
+		index => "sirus_basic_mapping"
   }
 }
