debug ensigne en enseigne

--- a/logstash/logstash_chargement_sirus.conf
+++ b/logstash/logstash_chargement_sirus.conf
@@ -44,7 +44,7 @@ filter {
 		"adr_et_loc_geo","adr_et_compl","adr_et_voie_num","adr_et_voie_repet","adr_et_voie_type","adr_et_voie_lib","adr_et_cedex",
 		"adr_et_distsp","sir_adr_et_com_lib","adr_et_post","adr_et_l1","adr_et_l2","adr_et_l3","adr_et_l4","adr_et_l5","adr_et_l6",
 		"adr_et_l7","nic_siege","unite_type","region","adr_depcom","region_impl","region_mult","tr_eff_etp","cj","denom","denom_condense",
-		"sigle","ensigne","eff_3112_uniteLegale","eff_etp_uniteLegale","eff_effet_daaaammjj_uniteLegale"]
+		"sigle","enseigne","eff_3112_uniteLegale","eff_etp_uniteLegale","eff_effet_daaaammjj_uniteLegale"]
     separator => ";"
 	  source => message
     remove_field => ["message","host","path","@version","@timestamp"]
